--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
     <!-- ✅ Add favicon / icon -->
     <link rel="icon" type="image/png" href="/logo.png" />
+    
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#9b87f5" />
+    <link rel="apple-touch-icon" href="/logo.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
